# centaur

./: .dockerignore  AGENTS.md  Dockerfile  Justfile  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: deploy.yml  publish-images.yml
apps/slackbot/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/usage/: README.md  (+5 more)
centaur_sdk/: pyproject.toml  tool_sdk.py
docs/: 1password-setup.md  agent-runtime-incident-review-2026-03-26.md  sidebar.ts  vocs.config.ts  who-said-it-plan.md
plugins/agent/: client.py  pyproject.toml
plugins/confmonitor/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
plugins/ironclad/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
plugins/parchiver/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
plugins/reth/: __init__.py  cli.py  pyproject.toml
plugins/reth-log-analyzer/: cli.py  client.py  graphs.py  pyproject.toml
plugins/telegram/: __init__.py  cli.py  client.py  pyproject.toml  user_client.py
plugins/termsheet/: __init__.py  cli.py  client.py  generator.py  models.py  pyproject.toml  store.py  template.py  template_filler.py
sandbox/: Dockerfile  SYSTEM_PROMPT.md  SYSTEM_PROMPT_INVEST.md  entrypoint.sh  harness_session.py
scripts/: analyze_slack_seed_corpus.py  auth-bootstrap.js  build_self_improve_notifier_input.py  build_slackbot_regression_matrix.py  deploy-fresh.sh  legal_eval_runner.py  qa-full-tools.py  refresh_slack_fuzz_feedback.py  render_synthetic_cases.ts  seed_threads.py  slackbot_fuzz.py  smoke-test-clis.sh  smoke_test_integrations.py  snapshot_slack_fuzz_db.py  test-firewall.sh
services/api-rs/: Cargo.toml  Dockerfile  Justfile
services/api-rs/crates/centaur-api-server/: Cargo.toml
services/api-rs/crates/centaur-api-server/src/: args.rs  cli.rs  client.rs  error.rs  lib.rs  main.rs  routes.rs  tool_discovery.rs  types.rs
services/api-rs/crates/centaur-api-server/src/cli/: iron_proxy.rs  kubernetes.rs  workload.rs
services/api-rs/crates/centaur-iron-control/: Cargo.toml
services/api-rs/crates/centaur-iron-control/src/: client.rs  lib.rs  models.rs  principal.rs  registry.rs  session.rs  util.rs
services/api-rs/crates/centaur-iron-proxy/: Cargo.toml
services/api-rs/crates/centaur-iron-proxy/src/: fragment.rs  infra.yaml  lib.rs
services/api-rs/crates/centaur-iron-proxy/src/model/: mod.rs  postgres.rs
services/api-rs/crates/centaur-iron-proxy/tests/: env_secret_proxy_e2e.rs
services/api-rs/crates/centaur-perms/src/: main.rs  tests.rs  tools.rs  translate.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/: Cargo.toml
services/api-rs/crates/centaur-sandbox-agent-k8s/src/: config.rs  crd.rs  iron_proxy.rs  lib.rs  tests.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/resources/: sandbox.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/resources/iron_proxy/: names.rs  pod.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/resources/iron_proxy/pod/: env.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/resources/sandbox/: env.rs
services/api-rs/crates/centaur-sandbox-agent-k8s/src/resources/sandbox/env/: proxy.rs  vars.rs
services/api-rs/crates/centaur-sandbox-core/src/: backend.rs  lifecycle.rs  spec.rs
services/api-rs/crates/centaur-sandbox-core/src/spec/: mod.rs
services/api-rs/crates/centaur-sandbox-e2e/tests/: failure.rs  io.rs  lifecycle.rs  proxy.rs  reconnect.rs
services/api-rs/crates/centaur-sandbox-e2e/tests/support/: mod.rs
services/api-rs/crates/centaur-sandbox-local/: Cargo.toml
services/api-rs/crates/centaur-sandbox-local/src/: lib.rs
services/api-rs/crates/centaur-sandbox-manager/: Cargo.toml
services/api-rs/crates/centaur-sandbox-manager/src/: lib.rs  manager.rs
services/api-rs/crates/centaur-session-cli/: Cargo.toml
services/api-rs/crates/centaur-session-cli/src/: main.rs
services/api-rs/crates/centaur-session-core/: Cargo.toml
services/api-rs/crates/centaur-session-core/src/: lib.rs
services/api-rs/crates/centaur-session-runtime/: Cargo.toml
services/api-rs/crates/centaur-session-runtime/src/: lib.rs  runtime.rs  workload.rs
services/api-rs/crates/centaur-session-runtime/src/runtime/: input.rs  sandbox.rs  session.rs
services/api-rs/crates/centaur-session-sqlx/: Cargo.toml
services/api-rs/crates/centaur-session-sqlx/migrations/: 0001_session_control_plane.sql
services/api-rs/crates/centaur-session-sqlx/src/: lib.rs
services/api-rs/crates/centaur-session-sqlx/tests/: etl_context_rls.rs
services/api-rs/crates/centaur-telemetry/src/: lib.rs
services/api-rs/crates/centaur-tools/src/: main.rs
services/api-rs/crates/centaur-workflows/src/: lib.rs
services/api-rs/rfcs/: 0002-session-control-plane.md
tests/: test_reload.py  test_tools.py
tools/: README.md
tools/alchemy/: pyproject.toml
tools/anchorage/: pyproject.toml
tools/archiver/: cli.py  client.py  pyproject.toml
tools/archiver/download/: orchestrator.py
tools/ashby/: pyproject.toml
tools/docusign/: __init__.py  pyproject.toml
tools/figma/: cli.py  pyproject.toml
tools/googlenews/: pyproject.toml
tools/infra/grafana/: pyproject.toml
tools/nano-banana/: pyproject.toml
tools/notion/: pyproject.toml
tools/opentable/: pyproject.toml
tools/paradigmdb/: client.py  database.py  pyproject.toml
tools/ptwittercli/: __init__.py  pyproject.toml
tools/pylon/: pyproject.toml
tools/slack/: cli.py  client.py  feedback.py  pyproject.toml
tools/slack/tests/: test_client.py
tools/social-monitor/: pyproject.toml
tools/tardis/: __init__.py  pyproject.toml
tools/theblock/: pyproject.toml
tools/veo3/: pyproject.toml
tools/websearch/: README.md  cli.py  client.py  models.py  pyproject.toml
workflows/: company_context_documents.py  paradigm_pulse_daily.py  policy_news_monitor.py  policy_news_sources.example.json  policy_news_sources.json  self_improve_daily.py  self_improve_deploy_notifier.py  slack_backfill.py  slack_sync.py  slack_sync_shared.py  usage_stats.py  weekly_usage_report.py
(+602 files in other folders)
