[project]
name = "ai-v2-plugin-agent"
description = "Spawn Docker sandbox containers running agent harnesses (amp, claude-code, codex)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["docker>=7.0.0", "psycopg2-binary>=2.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ai-v2-plugin]
module = "client.py"
cli_module = "cli.py"
