[project]
name = "ai-v2-plugin-parchiver"
description = "Document archiver for investment materials (DocSend, Google Drive)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ai-v2-plugin]
module = "client.py"
