[project]
name = "ai-v2-plugin-telegram"
description = "Telegram CLI for AI agents - send messages, search chats, gather context"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "telethon>=1.36.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ai-v2-plugin]
module = "client.py"
