[workspace]
members = [
    "crates/centaur-sandbox-core",
    "crates/centaur-sandbox-e2e",
    "crates/centaur-sandbox-agent-k8s",
    "crates/centaur-sandbox-local",
    "crates/centaur-sandbox-manager",
    "crates/centaur-session-core",
    "crates/centaur-session-sqlx",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/paradigmxyz/centaur"

[workspace.dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
centaur-sandbox-core = { path = "crates/centaur-sandbox-core" }
centaur-sandbox-agent-k8s = { path = "crates/centaur-sandbox-agent-k8s" }
centaur-sandbox-local = { path = "crates/centaur-sandbox-local" }
centaur-sandbox-manager = { path = "crates/centaur-sandbox-manager" }
centaur-session-core = { path = "crates/centaur-session-core" }
centaur-session-sqlx = { path = "crates/centaur-session-sqlx" }
clap = { version = "4.6.1", features = ["derive", "env"] }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "time"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = "1"
uuid = { version = "1", features = ["serde", "v4"] }
