[workspace]
members = [
    "crates/centaur-sandbox-core",
    "crates/centaur-sandbox-local",
    "crates/centaur-sandbox-manager",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/paradigmxyz/centaur"

[workspace.dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
centaur-sandbox-core = { path = "crates/centaur-sandbox-core" }
centaur-sandbox-local = { path = "crates/centaur-sandbox-local" }
centaur-sandbox-manager = { path = "crates/centaur-sandbox-manager" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = "1"
