[workspace]
members = [
    "crates/centaur-api-server",
    "crates/centaur-iron-proxy",
    "crates/centaur-sandbox-core",
    "crates/centaur-sandbox-e2e",
    "crates/centaur-sandbox-agent-k8s",
    "crates/centaur-sandbox-local",
    "crates/centaur-sandbox-manager",
    "crates/centaur-session-cli",
    "crates/centaur-session-core",
    "crates/centaur-session-runtime",
    "crates/centaur-session-sqlx",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/paradigmxyz/centaur"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
bytes = { version = "1", features = ["serde"] }
centaur-api-server = { path = "crates/centaur-api-server" }
centaur-sandbox-core = { path = "crates/centaur-sandbox-core" }
centaur-sandbox-agent-k8s = { path = "crates/centaur-sandbox-agent-k8s" }
centaur-iron-proxy = { path = "crates/centaur-iron-proxy" }
centaur-sandbox-local = { path = "crates/centaur-sandbox-local" }
centaur-sandbox-manager = { path = "crates/centaur-sandbox-manager" }
centaur-session-core = { path = "crates/centaur-session-core" }
centaur-session-runtime = { path = "crates/centaur-session-runtime" }
centaur-session-sqlx = { path = "crates/centaur-session-sqlx" }
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = "0.28"
eventsource-stream = "0.2.3"
eyre = "0.6"
futures-util = { version = "0.3", features = ["sink"] }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
ratatui = "0.29"
sqlx = { version = "0.8.6", default-features = false, features = ["derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "time"] }
strum = { version = "0.28", features = ["derive"] }
test-case = "3.3.1"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
