[project]
name = "anchorage"
description = "Anchorage Digital API — custody, vaults, staking, balances"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
anchorage = "anchorage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
