[project]
name = "ashby"
description = "Ashby ATS CLI for AI agents — query candidates, jobs, applications, interviews"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pypdf>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["api.ashbyhq.com"]
secrets = ["ASHBY_API_KEY"]
