[project]
name = "docusign"
description = "DocuSign eSignature CLI for AI agents - manage envelopes, templates, and signatures"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
