[project]
name = "googlenews"
description = "Google News RSS CLI for news search and headlines"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
