[project]
name = "paradigmdb"
description = "Paradigm internal PostgreSQL database, Shift notes, and BigQuery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.23.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
