[project]
name = "slack"
description = "Search Slack messages, channels, threads, users"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
slack = "slack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["slack.com"]
secrets = ["SLACK_BOT_TOKEN"]
