[project]
name = "websearch"
description = "Web search and deep research via Exa and Claude"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
