[project]
name = "grafana"
description = "Grafana observability — dashboards, VictoriaMetrics, VictoriaLogs, alerts, annotations"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
grafana = "centaur_tool_grafana.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_grafana"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
hosts = []
secrets = [
    "GRAFANA_URL",
    {type = "http", name = "GRAFANA_API_KEY", match_headers = ["Authorization"]},
]
